# tae

dns/: ds.py  ntypes.py  pyproject.toml  reader.py  utils.py  view.py
dns/templates/: specaits.yaml  specbow.yaml
dns/tests/: df.py  tests_ds.py
dns/tests/outputs/: report-aits.html  report-bow.html
docs/: sample.txt
legos/: .pre-commit-config.yaml  pyproject.toml  requirements.txt
legos/dns/: ds.py  ntypes.py  reader.py  utils.py  view.py
legos/prompts/: datamodel.md
legos/tests/: test_ds.py
legos/tests/fixtures/: Chart.excalidraw  Org Chart.md  Sample.excalidraw  tdf.py
legos/tests/outputs/: report-aits.html  report-bow.html
legos/tests/prompts/: datamodel.md
legos/tests/templates/: specaits.yaml  specbow-flex.yaml  template.html
legos/tests/templates/core/: composer.yaml  ds.yaml  enum.yaml  env.yaml  mail.yaml  media.yaml  mutate.yaml  pipeline.yaml  plots.yaml  query.yaml  theme.yaml  ui_native.yaml  widget.yaml
legos/tests/templates/usecases/: specold.yaml
legos/tests/templates/usecases/lowcode/: specbow.yaml
legos/tests/templates/usecases/office/: template-ol.html
